--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="p-2">
                 <!-- == logo == -->
                 <div class="bk-logo" id="home">
-                    <img src="../Bikey/img/bk-logo.png" alt="" class="w-100">
+                    <img src="/img/bk-logo.png" alt="" class="w-100">
                 </div>
                 <!-- == about the brand == -->
                 <div class="bk-about" id="about">
