--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bikey Logistics is the number 1 logistics service company on Unilorin campus. Call 08168024708 for enquires." />
     <title>Bikey Logistics - Welcome!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
@@ -15,13 +16,13 @@
 </head>
 <body>
     <!-- ==== MAIN CONTAINER ==== -->
-    <div class="main-cont">
+    <div class="main-cont row">
         <!-- ==== INNER DIVISION ==== -->
         <div class="col-12 col-md-6">
             <div class="p-2">
                 <!-- == logo == -->
                 <div class="bk-logo" id="home">
-                    <img src="/img/bk-logo.png" alt="" class="w-100">
+                    <img src="img/bk-logo.png" alt="" class="w-100">
                 </div>
                 <!-- == about the brand == -->
                 <div class="bk-about" id="about">
@@ -160,23 +161,23 @@
     <footer>
         <div class="bk-ft">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 ft-1">
                     <div class="ft-img">
                         <a href="#home"><img src="img/bk-wtrmk1.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 ft-2">
                     <div>
                         <h3>Quick Links</h3>
                         <ul class="ft-links">
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About Us</a></li>
                             <li><a href="#mop">Mode of Operation</a></li>
-                            <li><a href="#">Buy the Company</a></li>
+                            <li><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/40460645184878281858481222293177622455660335553063012188770801980861321314305" target="_blank">Buy the Company</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 ft-3">
                     <div>
                         <h3>Send a message</h3>
                         <form action="" class="contact-form">
@@ -187,6 +188,10 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright &copy; 2022 | Bikey Logistics.</p>
+                <p class="font-italic">Made with sweat by publikphigor.</p>
             </div>
         </div>
     </footer>
