--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
 
                         - Call/Flash: <a href="tel:+2348029325867">08029325867</a> , <a href="tel:+2349037553681">09037553681</a>. <br> <br>
 
-                        - A will give you an immediate call back and be at your location in 5-10mins.
+                        - A rider will give you an immediate call back and be at your location in 5-10mins.
                     </p>
                     <p class="ml-2">
                         Make sure to collect a receipt every time you use our service in case of mismanagement of your item or error in delivery. Receipts are proofs you did business with us. You can also accumulate receipts to claim branded merchandise and company swags in future.
                     </p>
-                    <p class="font-weight-bold font-italic">We only operate on Unilorin campus for now from Sunday through Saturday (7:30am - 9:00m).</p>
+                    <p class="font-weight-bold font-italic">We only operate on Unilorin campus for now from Sunday through Saturday (7:30am - 9:00pm).</p>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About Us</a></li>
                             <li><a href="#mop">Mode of Operation</a></li>
-                            <li><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/40460645184878281858481222293177622455660335553063012188770801980861321314305" target="_blank">Buy the Company</a></li>
+                            <li><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/40460645184878281858481222293177622455660335553063012188770801981960832942081" target="_blank">Buy the Company</a></li>
                         </ul>
                     </div>
                 </div>
