--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <!-- == about the brand == -->
                 <div class="bk-about" id="about">
                     <h2 class="bk-h2">About The Brand</h2>
-                    <p class="ml-2">
+                    <p class="mb-2">
                         Bikey Logistics is an emerging Logistics service in University of Ilorin campus whose sole aim is to make campus life easier for students by sorting the need for pickups, deliveries and errands.
                     </p>
-                    <p class="ml-2">
+                    <p class="mb-2">
                         At Bikey, we priotise promptness and care about the satisfaction of our customers and as well as their goods. Our riders carry out errands diligently, handling it like they would their personal business. They also handle goods with utmost care to ensure safe pickup and delivery.
                     </p>
                 </div>
@@ -44,7 +44,7 @@
                             <img src="img/publikphigor.JPG" alt="" class="tc-img">
                             <div class="tc-info">
                                 <h3 class="tc-name">K. Olaitan</h3>
-                                <span class="t-post">Campus Representative</span>
+                                <span class="t-post">Founder</span>
                                 <div class="tc-socials">
                                     <i class="fa fa-facebook"></i>
                                     <i class="fa fa-twitter"></i>
