--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bikey Logistics is the number 1 logistics service company on Unilorin campus. Call 08168024708 for enquires." />
+    <meta name="description"
+        content="Bikey Logistics is the number 1 logistics service company on Unilorin campus. Call 08168024708 for enquires." />
     <title>Bikey Logistics - Welcome!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/fontawesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,700;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,700;1,800&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="img/bk-icon.png" type="image/gif">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- ==== MAIN CONTAINER ==== -->
     <div class="main-cont row">
@@ -28,10 +34,14 @@
                 <div class="bk-about" id="about">
                     <h2 class="bk-h2">About The Brand</h2>
                     <p class="mb-2">
-                        Bikey Logistics is an emerging Logistics service in University of Ilorin campus whose sole aim is to make campus life easier for students by sorting the need for pickups, deliveries and errands.
+                        Bikey Logistics is an emerging Logistics service in University of Ilorin campus whose sole aim
+                        is to make campus life easier for students by sorting the need for pickups, deliveries and
+                        errands.
                     </p>
                     <p class="mb-2">
-                        At Bikey, we priotise promptness and care about the satisfaction of our customers and as well as their goods. Our riders carry out errands diligently, handling it like they would their personal business. They also handle goods with utmost care to ensure safe pickup and delivery.
+                        At Bikey, we priotise promptness and care about the satisfaction of our customers and as well as
+                        their goods. Our riders carry out errands diligently, handling it like they would their personal
+                        business. They also handle goods with utmost care to ensure safe pickup and delivery.
                     </p>
                 </div>
                 <hr class="bk-hr">
@@ -46,10 +56,14 @@
                                 <h3 class="tc-name">K. Olaitan</h3>
                                 <span class="t-post">Founder</span>
                                 <div class="tc-socials">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-linkedin"></i>
+                                    <a href="https://facebook.com/funnyjhay" target="_blank"><i
+                                            class="fab fa-facebook"></i></a>
+                                    <a href="https://twitter.com/publikphigor" target="_blank"><i
+                                            class="fab fa-twitter"></i></a>
+                                    <a href="https://instagram.com/publikphigor" target="_blank"><i
+                                            class="fab fa-instagram"></i></a>
+                                    <a href="https://linkedin.com/mwlite/in/koladeleolaitan" target="_blank"><i
+                                            class="fab fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -60,10 +74,10 @@
                                 <h3 class="tc-name">Omofoma Victor</h3>
                                 <span class="t-post">Brand Ambassador</span>
                                 <div class="tc-socials">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-linkedin"></i>
+                                    <a href="#" target="_blank"><i class=" fab fa-facebook"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-twitter"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-instagram"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -74,10 +88,10 @@
                                 <h3 class="tc-name">Adeniyi Anthonia</h3>
                                 <span class="t-post">Brand Ambassador</span>
                                 <div class="tc-socials">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-linkedin"></i>
+                                    <a href="https://twitter.com/anthonia_favour?t=B3Ah4rFOfzBxM4gke5mBVA&s=09"
+                                        target="_blank"><i class=" fab fa-twitter"></i></a>
+                                    <a href="https://www.linkedin.com/in/favour-adeniyi-6a1577216
+                                    Linkedin" target="_blank"><i class=" fab fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -88,10 +102,10 @@
                                 <h3 class="tc-name">Oluwaseun Damian</h3>
                                 <span class="t-post">Brand Ambassador</span>
                                 <div class="tc-socials">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-linkedin"></i>
+                                    <a href="#" target="_blank"><i class=" fab fa-facebook"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-twitter"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-instagram"></i></a>
+                                    <a href="#" target="_blank"><i class=" fab fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -102,10 +116,10 @@
                                 <h3 class="tc-name">Owolabi Samuel</h3>
                                 <span class="t-post">Product Designer</span>
                                 <div class="tc-socials">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-linkedin"></i>
+                                    <a href=" https://twitter.com/Sam_ci_ty?t=0gOkKLhaCqEsK0DeNmjScA&s=09"
+                                        target="_blank"><i class=" fab fa-twitter""></i></a>
+                                    <a href=" https://instagram.com/owolabi_samuel1?igshid=YmMyMTA2M2Y=" target="
+                                            _blank"><i class=" fab fa-instagram""></i></a>
                                 </div>
                             </div>
                         </div>
@@ -113,51 +127,88 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-6">
+        <div class=" col-12 col-md-6">
             <div class="p-2">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleControls" class="carousel slide"
+                    data-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active slide-div">
-                        <img class="d-block w-100" src="img/bike1.jpg" alt="First slide">
-                        <h3 class="slide-text">Want it fast? Call Bikey!</h3>
-                        <div class="slide-overlay"></div>
-                      </div>
-                      <div class="carousel-item slide-div">
-                        <img class="d-block w-100" src="img/bike2.jpg" alt="Second slide">
-                        <h3 class="slide-text">We give you value for your money.</h3>
-                        <div class="slide-overlay"></div>
-                      </div>
+                        <div class="carousel-item active slide-div">
+                            <img class="d-block w-100" src="img/bike1.jpg"
+                                alt="First slide">
+                            <h3 class="slide-text">Want it fast? Call Bikey!
+                            </h3>
+                            <div class="btns">
+                                <a href="tel:+2348029325867" class="a-btn"><i
+                                        class="fa fa-phone"></i> Call us
+                                    now</a>
+                                <a href="https://wa.me/message/CKSH2VU3D24ED1"
+                                    class="a-btn"><i class="fab fa-whatsapp"></i>
+                                    WhatsApp</a>
+                            </div>
+                            <div class="slide-overlay"></div>
+                        </div>
+                        <div class="carousel-item slide-div">
+                            <img class="d-block w-100" src="img/bike2.jpg"
+                                alt="Second slide">
+                            <h3 class="slide-text">We give you value for
+                                your money.</h3>
+                            <div class="btns">
+                                <a href="tel:+2348029325867" class="a-btn"><i
+                                        class="fa fa-phone"></i> Call us
+                                    now</a>
+                                <a href="https://wa.me/message/CKSH2VU3D24ED1"
+                                    class="a-btn"><i class="fab fa-whatsapp"></i>
+                                    WhatsApp</a>
+                            </div>
+                            <div class="slide-overlay"></div>
+                        </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
+                    <a class="carousel-control-prev" href="#carouselExampleControls"
+                        role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"
+                            aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
+                    <a class="carousel-control-next" href="#carouselExampleControls"
+                        role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"
+                            aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
                     </a>
-                  </div>
+                </div>
 
-                  <!-- == mode of operation == -->
-                  <div class="bk-mop" id="mop">
+                <!-- == mode of operation == -->
+                <div class="bk-mop" id="mop">
                     <h2 class="bk-h2">Mode of Operation</h2>
                     <p class="ml-2">
-                        - Hit us up on WhatsApp via <a href="https://wa.me/message/CKSH2VU3D24ED1">this link.</a> or <br> <br>
+                        - Hit us up on WhatsApp via <a
+                            href="https://wa.me/message/CKSH2VU3D24ED1">this
+                            link.</a> or
+                        <br> <br>
 
-                        - Call/Flash: <a href="tel:+2348029325867">08029325867</a> , <a href="tel:+2349037553681">09037553681</a>. <br> <br>
+                        - Call/Flash: <a href="tel:+2348029325867">08029325867</a> ,
+                        <a href="tel:+2349037553681">09037553681</a>. <br>
+                        <br>
 
-                        - A rider will give you an immediate call back and be at your location in 5-10mins.
+                        - A rider will give you an immediate call back and
+                        be at your location in 5-10mins.
                     </p>
                     <p class="ml-2">
-                        Make sure to collect a receipt every time you use our service in case of mismanagement of your item or error in delivery. Receipts are proofs you did business with us. You can also accumulate receipts to claim branded merchandise and company swags in future.
+                        Make sure to collect a receipt every time you use
+                        our service in case of mismanagement of your
+                        item or error in delivery. Receipts are proofs you
+                        did business with us. You can also accumulate
+                        receipts to claim branded merchandise and company
+                        swags in future.
                     </p>
-                    <p class="font-weight-bold font-italic">We only operate on Unilorin campus for now from Sunday through Saturday (7:30am - 9:00pm).</p>
+                    <p class="font-weight-bold font-italic">We only operate
+                        on Unilorin campus for now from Sunday
+                        through Saturday (7:30am - 9:00pm).</p>
                 </div>
             </div>
         </div>
-        
     </div>
-    
+
     <footer>
         <div class="bk-ft">
             <div class="row">
@@ -173,7 +224,8 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About Us</a></li>
                             <li><a href="#mop">Mode of Operation</a></li>
-                            <li><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/40460645184878281858481222293177622455660335553063012188770801981960832942081" target="_blank">Buy the Company</a></li>
+                            <li><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/40460645184878281858481222293177622455660335553063012188770801981960832942081"
+                                    target="_blank">Buy the Company</a></li>
                         </ul>
                     </div>
                 </div>
@@ -183,7 +235,8 @@
                         <form action="" class="contact-form">
                             <input type="name" placeholder="Fullname">
                             <input type="email" placeholder="E-mail address">
-                            <textarea name="message" id="" cols="30" rows="5" placeholder="Enter Message . . ."></textarea>
+                            <textarea name="message" id="" cols="30" rows="5"
+                                placeholder="Enter Message . . ."></textarea>
                             <input type="submit" value="Submit">
                         </form>
                     </div>
@@ -191,15 +244,24 @@
             </div>
             <div class="copyright">
                 <p>Copyright &copy; 2022 | Bikey Logistics.</p>
-                <p class="font-italic">Made with sweat by <a href="https://twitter.com/publikphigor">publikphigor</a>.</p>
+                <p class="font-italic">Made with sweat by <a
+                        href="https://twitter.com/publikphigor">publikphigor</a>.
+                </p>
             </div>
         </div>
     </footer>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
