--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,7 @@
       content="https://https://www.bikeylogistics.com/img/bk-icon.png"
     />
     <meta name="description"
-        content="Bikey Logistics is the number 1 logistics service company on Unilorin campus. Call 08101555748 for enquires." />
+        content="Bikey Logistics is the number 1 logistics service in Unilorin, Ilorin, Kwara State. Want it fast? Call Bikey! (08101555748)" />
     <title>Bikey Logistics - Welcome!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome-free-6.1.1-web/css/all.min.css">
