--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Author" content="Koladele Olaitan" />
     <meta
       property="og:image"
-      content="https://https://www.bikeylogistics.com/img/bk-icon.png"
+      content="https://bikeylogistics.com/img/bk-icon.png"
     />
     <meta name="description"
         content="Bikey Logistics is the number 1 logistics service in Unilorin, Ilorin, Kwara State. Want it fast? Call Bikey! (08101555748)" />
